Fixes ButtonGroup appearance on Safari

--- a/src/components/Button/Button.module.scss
+++ b/src/components/Button/Button.module.scss
@@ -14,6 +14,7 @@
   display: inline-flex;
   align-items: center;
   justify-content: center;
+  margin: 0;
 }
 
 .content {
